--- a/tasks/systemd.yml
+++ b/tasks/systemd.yml
@@ -28,7 +28,8 @@
     (ansible_distribution == "Ubuntu" and ansible_distribution_major_version|int >= 16) or
     (ansible_os_family == "RedHat" and ansible_distribution_major_version|int >= 7)
 
-- meta: flush_handlers
+- name: Flush handlers
+  meta: flush_handlers
 
 - name: enable and start fact systemd service
   service:
