github action: add freeing disk space step (2)

--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -65,7 +65,7 @@ jobs:
           df -h
       - name: Free disk space
         run: |
-          rm -Rf /usr/local/lib/android
+          sudo rm -Rf /usr/local/lib/android
           df -h
       - name: Install lxd requirements
         run: |
