--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -98,7 +98,7 @@ jobs:
           sudo lxc network list
           # configure storage pool
           sudo lxc storage list
-          sudo lxc storage create pool1 zfs
+          sudo lxc storage create pool1 zfs size=25G
           sudo lxc storage list
           sudo zpool list
           sudo lxc profile device add default root disk path=/ pool=pool1
@@ -149,6 +149,8 @@ jobs:
           sudo kitchen exec ${{ matrix.suite }}-${{ matrix.distribution }}-${{ matrix.version2 }} -c 'ping -c 1 www.google.com' || true
           sudo kitchen exec ${{ matrix.suite }}-${{ matrix.distribution }}-${{ matrix.version2 }} -c 'ping -c 1 8.8.8.8' || true
           df -h
+          sudo lxc storage list
+          sudo zpool list
         if: ${{ failure() }}
         continue-on-error: true
       - name: After script - systemd
