--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -17,9 +17,9 @@ jobs:
       max-parallel: 4
       matrix:
         include:
-          - distribution: centos
-            version: 8
-            version2: 8
+          - distribution: fedora
+            version: 33
+            version2: 33
             suite: default
             experimental: true
           - distribution: ubuntu
