--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -12,3 +12,6 @@
   when: ansible_distribution == 'Fedora'
 
 - include_tasks: fact.yml
+
+- import_tasks: firewall.yml
+  when: fact_firewall_enable | bool
