Fedora: comment package not available

--- a/vars/Fedora.yml
+++ b/vars/Fedora.yml
@@ -11,13 +11,15 @@ fact_pkgs:
   - libtool
   - file-devel
   - libffi-devel
-  - libmagic-devel
-  - libfuzzy-devel
+  # - libmagic-devel
+  # - libfuzzy-devel
   - python3-tlsh
   - python3-ssdeep
   - unzip
-  - clamav-daemon
-  - mongodb
+  - clamav
+  - clamav-update
+  # Not in Fedora repo per license change
+  # - mongodb
 
 fact_binwalk_pkgs:
   - xorg-x11-server-Xvfb
