Set Transparent Huge Page for mongodb

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -11,4 +11,5 @@
   include_vars: "Fedora.yml"
   when: ansible_distribution == 'Fedora'
 
+- include_tasks: mongodb-thp.yml
 - include_tasks: fact.yml
