Set Transparent Huge Page for mongodb (2)

--- a/tasks/mongodb-thp.yml
+++ b/tasks/mongodb-thp.yml
@@ -12,3 +12,5 @@
     dest: /etc/sysfs.conf
     regexp: '^kernel/mm/transparent_hugepage/enabled = .*'
     line: 'kernel/mm/transparent_hugepage/enabled = never'
+    mode: '0644'
+    create: yes
