--- a/tasks/fact.yml
+++ b/tasks/fact.yml
@@ -110,6 +110,13 @@
     - { re: '^        ssl on;', rep: '        # ssl on;' }
   when: fact_nginx_shim
 
+- name: Nginx | Ensure logs in target directory
+  replace:
+    dest: "{{ fact_root }}/src/config/nginx.conf"
+    regexp: "access_log .* compression;"
+    replace: "access_log {{ fact_logdir }}/fact_web.log compression;"
+    mode: '0644'
+
 - name: Check if marker exists
   stat: path="{{ fact_root }}/.before_install_py"
   register: mark
