systemd end: add 5sec pause as intermittent service issue

--- a/tasks/systemd.yml
+++ b/tasks/systemd.yml
@@ -64,3 +64,7 @@
     not (ansible_virtualization_type is defined and
           (ansible_virtualization_type == "docker")
         )
+
+- name: Give 5 seconds to ensure service correctly started
+  pause:
+    seconds: 5
