--- a/test/integration/default/default.yml
+++ b/test/integration/default/default.yml
@@ -18,4 +18,4 @@
     - juju4.fact
 
 - name: Verify playbook
-  import_playbook: verify.yml
+  import_playbook: ../../../molecule/default/verify.yml
