kitchen test/default: fix verify path in kitchen

--- a/test/integration/default/default.yml
+++ b/test/integration/default/default.yml
@@ -18,4 +18,6 @@
     - juju4.fact
 
 - name: Verify playbook
-  import_playbook: ../../../molecule/default/verify.yml
+  # import_playbook: verify.yml
+  # in kitchen
+  import_playbook: /tmp/kitchen/juju4.fact/molecule/default/verify.yml
